--- a/index.html
+++ b/index.html
@@ -15,6 +15,47 @@
   <title>RandomFlix</title>
 </head>
 <body>
+  <header>
+    <img 
+      src="./assets/shuffle.svg" 
+      alt="Duas setas se cruzando"
+    />
+    
+    <h1>
+      Não sabe o que assistir?
+    </h1>
+  </header>
 
+  <main>
+    <section id="moviesSection">
+      <img 
+        src="https://images.unsplash.com/photo-1662581871625-7dbd3ac1ca18?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80" 
+        alt="" 
+      />
+      
+      <div>
+        <h2>
+          Os Caça-Fantasmas
+        </h2>
+        <p>
+          Em Nova York Peter Venkman, Ray Stantz e Egon Spengler são três cientistas do departamento de psicologia da Columbia University, que se dedicam ao estudo de casos paranormais. Quando a subvenção termina eles são despedidos e Venkman sugere que abram um negócio próprio, a exterminadora de fantasmas Ghostbusters. Inicialmente eles só têm despesas e nenhum cliente, mas eis que surge Dana Barrett, uma violoncelista que teve uma experiência assustadora em seu apartamento.
+        </p>
+      </div>
+    </section>
+
+    <button id="searchMovies">
+      <img    
+        src="./assets/shuffle.svg" 
+        alt="Duas setas se cruzando"
+      />
+      <strong>Encontrar filme</strong>
+    </button>
+  </main>
+
+  <footer>
+    <p>
+      Clique em "Encontrar filme" que traremos informações de algum filme para você assistir hoje.
+    </p>
+  </footer>
 </body>
 </html>
